stop the image from overflow

--- a/style.css
+++ b/style.css
@@ -90,6 +90,8 @@ h2{
 .info-container img{
     width: 200px;
     height: 200px;
+    max-width: 100%;
+    object-fit: cover;
 }
 
 
